Fix footer whitespace

--- a/src/components/styles/footer.css
+++ b/src/components/styles/footer.css
@@ -48,7 +48,8 @@ a:visited {
         justify-content: space-around;
         align-items: flex-start;
         height: fit-content;
-        margin: 2rem auto;
+        margin: 0 auto;
+        padding-bottom: 2rem;
     }
 
     .SocialMedia div {
